--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,70 @@
-
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Roboto:wght@400;500;700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-   @layer base {
+@layer base {
   html {
-    background-color : #f5f5f5;
+    background-color: #f5f5f5;
   }
-}   
-
-
-
+}
 
 .my-container {
-  @apply px-[15px] sm:px-[20px] md:px-[50px] lg:px-[75px] max-w-[1366px] mx-auto
+  @apply px-[15px] sm:px-[20px] md:px-[50px] lg:px-[75px] max-w-[1366px] mx-auto;
 }
 
 /* header-> main -> search */
 .search::-webkit-search-cancel-button {
   -webkit-appearance: none;
 }
+
+.slider-control-bottomcenter button {
+  background: #2dd06e !important ;
+  border-radius: 50%;
+  width: 8px !important;
+  height: 8px !important;
+  margin-bottom: 30px;
+}
+
+.slider-control-bottomcenter svg {
+  display: none !important;
+}
+.slider-control-bottomcenter li {
+  margin-right: 12px;
+}
+
+@media (max-width: 640px) {
+  .slider-control-bottomcenter button {
+   display:none
+  }
+  
+}
+
+.bg-styling {
+  @apply  bg-primaryBg bg-center bg-cover sm:bg-contain  bg-no-repeat w-screen h-[450px]  sm:h-[350px] md:h-[500px] lg:h-[652px] overflow-hidden ;
+}
+
+/* .slider-control-bottomcenter ul {
+display: flex;
+gap:40px;
+}
+
+https://headlessui.com/react/switch
+
+.slider-control-bottomcenter ul li svg  {
+
+border-radius: 100%;
+width: 10px;
+height: 10px;
+fill:#2DD06E;
+}
+.slider-control-bottomcenter ul li button  {
+
+
+fill:red;
+}
+ */
 
 /* Inputs and Buttons */
 
@@ -31,8 +74,6 @@
 [class*="__btn"]{
   @apply leading-4 rounded-btn  font-bold bg-secondary text-[#ffff] py-3 min-w-min w-full max-w-[156px] text-sm hover:bg-secondary/90
 } */
-
-
 
 /* hr {
   @apply border-success;
